lesson01 video05 time 01:50

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <h1>Освойте новую профессию и улучшите качество жизни</h1>
     <h2>Даем навыки, которые востребованы</h2>
     <p>Помогаем выбрать профессию, в которой вы добьетесь наилучших результатов.</p>
+    <input id="input">
+    <button id="button">Я учебная кнопка!</button>
+    <script>
+        console.log(document.getElementById('button'));
+    </script>
 </body>
 
 </html>
