lesson01 video05 time 03:20

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <input id="input">
     <button id="button">Я учебная кнопка!</button>
     <script>
-        console.log(document.getElementById('button'));
+        const button = document.getElementById('button');
+
+        console.log(button.textContent);
     </script>
 </body>
 
