lesson01 video05 time 04:05

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         const button = document.getElementById('button');
 
         console.log(button.textContent);
+
+        button.textContent = 'Я кнопка, которой поменяли надпись';
     </script>
 </body>
 
