lesson01 video05 time 05:10

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
         console.log(button.textContent);
 
-        button.textContent = 'Я кнопка, которой поменяли надпись';
+        button.onclick = function () {
+
+            button.textContent = 'Я кнопка, которой поменяли надпись';
+        }
     </script>
 </body>
 
