lesson01 video06 time 00:00

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <p>Помогаем выбрать профессию, в которой вы добьетесь наилучших результатов.</p>
     <input id="input">
     <button id="button">Я учебная кнопка!</button>
+    <img src="https://cdn-user53347.skyeng.ru/assets/images/core/layout/header/skyeng-logo.svg">
+    <a href="https://sky.pro">Учиться здесь</a>
     <script>
         const button = document.getElementById('button');
 
