lesson01 video06 time 04:58

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 
         console.log(logo.src);
 
+        logo.onclick = function () {
+
+            logo.src = 'https://static.tildacdn.com/tild6462-3339-4239-b365-356630303531/Group_18539.svg';
+        }
+
         button.onclick = function () {
 
             button.textContent = 'Я кнопка, которой поменяли надпись';
