lesson01 video06 time 07:25

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         button.onclick = function () {
 
             console.log(link.href);
+
+            link.href = '/';
         }
     </script>
 </body>
