lesson01 video06 time 10:05

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 
         button.onclick = function () {
 
-            link.href = '/';
-
-            console.log(link.href);
+            console.log(input.value);
+            console.log(input.getAttribute('value'));
 
         }
     </script>
