lesson01 video06 time 11:00

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Освойте новую профессию и улучшите качество жизни</h1>
     <h2>Даем навыки, которые востребованы</h2>
     <p>Помогаем выбрать профессию, в которой вы добьетесь наилучших результатов.</p>
-    <input id="input">
+    <input id="input" value="Заранее подготовленное значение">
     <button id="button">Я учебная кнопка!</button>
     <img id="logo" src="https://cdn-user53347.skyeng.ru/assets/images/core/layout/header/skyeng-logo.svg">
     <a id="link" href="https://sky.pro">Учиться здесь</a>
