lesson01 video06 time 12:15

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 
         button.onclick = function () {
 
-            console.log(input.value);
-            console.log(input.getAttribute('value'));
-
+            input.value = 'Новое значение';
         }
     </script>
 </body>
