lesson01 video06 time 13:10

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         button.onclick = function () {
 
-            input.value = 'Новое значение';
+            input.setAttribute('value', 'Новое значение');
         }
     </script>
 </body>
