lesson01 video06 time 14:23

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         button.onclick = function () {
 
-            input.setAttribute('value', 'Новое значение');
+            input.placeholder = 'Я ожидаю тут значение';
         }
     </script>
 </body>
