--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         body {
             font-family: Arial, Helvetica, sans-serif;
         }
+
+        .error {
+            background-color: lightcoral;
+        }
     </style>
 </head>
 
@@ -39,7 +43,9 @@
 
         button.onclick = function () {
 
-            input.placeholder = 'Я ожидаю тут значение';
+            button.textContent = 'Тревога!';
+
+            button.style.backgroundColor = 'lightcoral';
         }
     </script>
 </body>
