lesson01 video07 time 05:50

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 
             button.textContent = 'Тревога!';
 
-            button.style.backgroundColor = 'lightcoral';
+            button.className = 'error';
+
+            // button.style.backgroundColor = 'lightcoral';
         }
     </script>
 </body>
