lesson01 video07 time 06:15

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             button.textContent = 'Тревога!';
 
-            button.className = 'error';
+            button.classList.add('error');
 
             // button.style.backgroundColor = 'lightcoral';
         }
