lesson01 video07 time 12:15

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             if (totalProgress > 100) totalProgress = 100;
 
-            console.log(totalProgress);
+            progress.style.width = totalProgress + '%';
         }
     </script>
 </body>
