lesson01 video07 time 17:14

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             clicks += 1;
 
             button.dataset.clicks = clicks;
+
+            button.textContent = `О нет, по мне кликнули ${clicks} раз`;
         }
     </script>
 </body>
