lesson02 video04 time 06:40

--- a/lesson02/geolocation.html
+++ b/lesson02/geolocation.html
@@ -15,8 +15,17 @@
 
 <body>
     <h1>Browser Object Model (Web API)</h1>
+    <button id="geo-button">Определить геолокацию</button>
     <script>
-        console.log(navigator);
+        const geoButton = document.getElementById('geo-button');
+
+        geoButton.onclick = function () {
+
+            navigator.geolocation.getCurrentPosition(function (data) {
+
+                console.log(data);
+            });
+        }
     </script>
 </body>
 
