lesson02 video05 time 04:00

--- a/lesson02/localstorage.html
+++ b/lesson02/localstorage.html
@@ -16,7 +16,17 @@
 <body>
     <h1>Browser Object Model (Web API)</h1>
     <script>
-        console.log(localStorage);
+        let username = localStorage.getItem('username');
+
+        if (!username) {
+
+            username = prompt('Имя пользователя, пожалуйста');
+
+            if (username) {
+
+                localStorage.setItem('username', username);
+            }
+        }
     </script>
 </body>
 
