lesson03 video01 time 11:35

--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -26,6 +26,7 @@
 <body>
     <h1>Document Object Model</h1>
     <button class="button">Я кнопка, которая переезжает на классы</button>
+    <button class="button">Я кнопка, которая переезжает на классы</button>
     <script>
         const button = document.getElementsByClassName('button')[0];
 
