lesson03 video03 time 07:20

--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -25,9 +25,9 @@
 
 <body>
     <h1>Document Object Model</h1>
-    <button class="button count-button" data-clicks="0">Я кнопка, которая переезжает на классы</button>
+    <button class="button count-button promo" data-clicks="0">Я кнопка, которая переезжает на классы</button>
     <button class="button count-button" data-clicks="0">Я другая кнопка, которая переезжает на классы</button>
-    <button class="button promo">Я активная кнопка</button>
+    <button class="button promo count-button" data-clicks="0">Я активная кнопка</button>
     <button class="button promo">Я призывающая кнопка</button>
     <script>
         const countButtons = document.getElementsByClassName('count-button');
