lesson04 video02 time 09:25

--- a/lesson04/migrate-id.html
+++ b/lesson04/migrate-id.html
@@ -27,15 +27,15 @@
     <h1>Освойте новую профессию и улучшите качество жизни</h1>
     <h2>Даем навыки, которые востребованы</h2>
     <p>Помогаем выбрать профессию, в которой вы добьетесь наилучших результатов.</p>
-    <input id="input" value="Заранее подготовленное значение">
-    <button id="button" data-clicks="0">Ура, по мне ещё не кликали</button>
-    <div id="progress" class="progress"></div>
-    <img id="logo" src="https://cdn-user53347.skyeng.ru/assets/images/core/layout/header/skyeng-logo.svg">
-    <a id="link" href="https://sky.pro">Учиться здесь</a>
+    <input class="input" value="Заранее подготовленное значение">
+    <button class="button" data-clicks="0">Ура, по мне ещё не кликали</button>
+    <div class="progress" class="progress"></div>
+    <img class="logo" src="https://cdn-user53347.skyeng.ru/assets/images/core/layout/header/skyeng-logo.svg">
+    <a class="link" href="https://sky.pro">Учиться здесь</a>
     <script>
-        const button = document.getElementById('button');
+        const button = document.querySelector('.button');
 
-        const logo = document.getElementById('logo');
+        const logo = document.querySelector('.logo');
 
         console.log(logo.src);
 
