lesson04 video04 time 08:50

--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -32,7 +32,14 @@
         </div>
         <button class="frontend__close">Закрыть</button>
     </article>
+    <script>
+        const frontendClose = document.querySelector('.frontend__close');
 
+        frontendClose.onclick = function () {
+
+            console.log(frontendClose.parentElement);
+        }
+    </script>
 </body>
 
 </html>
