lesson04 video04 time 10:55

--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -42,6 +42,8 @@
             console.log('parent', frontend);
 
             console.log('parent lastElementChild', frontend.lastElementChild);
+
+            console.log(frontendClose === frontend.lastElementChild);
         }
     </script>
 </body>
