lesson04 video04 time 11:30

--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -44,6 +44,10 @@
             console.log('parent lastElementChild', frontend.lastElementChild);
 
             console.log(frontendClose === frontend.lastElementChild);
+
+            console.log('parent lastElementChild', frontend.lastElementChild);
+
+            console.log('parent firstElementChild', frontend.firstElementChild);
         }
     </script>
 </body>
