lesson04 video04 time 12:25

--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -48,6 +48,8 @@
             console.log('parent lastElementChild', frontend.lastElementChild);
 
             console.log('parent firstElementChild', frontend.firstElementChild);
+
+            console.log('frontendClose previousElementSibling', frontendClose.previousElementSibling);
         }
     </script>
 </body>
