lesson04 video04 time 13:07

--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -50,6 +50,8 @@
             console.log('parent firstElementChild', frontend.firstElementChild);
 
             console.log('frontendClose previousElementSibling', frontendClose.previousElementSibling);
+
+            console.log('frontendClose nextElementSibling', frontendClose.nextElementSibling);
         }
     </script>
 </body>
