lesson04 video04 time 17:00

--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -41,6 +41,15 @@
 
             console.log(child);
         }
+
+        let child = frontend.firstElementChild;
+
+        while (child) {
+
+            console.log(child);
+
+            child = child.nextElementSibling;
+        }
     </script>
 </body>
 
