lesson04 video04 time 27:10

--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -41,6 +41,8 @@
 
             const frontendAreYouSure = frontendClose.previousElementSibling;
 
+            frontendAreYouSure.classList.remove('frontend__are-you-sure_hidden');
+
             frontendClose.remove();
 
             console.log(frontendAreYouSure);
