lesson04 video04 time 29:08

--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -39,7 +39,9 @@
 
         frontendClose.onclick = function () {
 
-            const frontendAreYouSure = frontendClose.previousElementSibling;
+            const frontendBlock = frontendClose.parentElement;
+
+            const frontendAreYouSure = frontendBlock.querySelector('.frontend__are-you-sure');
 
             frontendAreYouSure.classList.remove('frontend__are-you-sure_hidden');
 
