lesson04 video04 time 31:00

--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -39,7 +39,7 @@
 
         frontendClose.onclick = function () {
 
-            const frontendBlock = frontendClose.parentElement;
+            const frontendBlock = frontendClose.closest('.frontend');
 
             const frontendAreYouSure = frontendBlock.querySelector('.frontend__are-you-sure');
 
