--- a/lesson04/style.html
+++ b/lesson04/style.html
@@ -30,7 +30,9 @@
     <button class="button promo count-button" data-clicks="0">Я активная кнопка</button>
     <button class="button promo">Я призывающая кнопка</button>
     <script>
+        const countButton = document.querySelector('.count-button');
 
+        console.log(getComputedStyle(countButton));
     </script>
 </body>
 
