lesson05 video02 time 15:20

--- a/lesson05/index.html
+++ b/lesson05/index.html
@@ -11,7 +11,26 @@
 <body>
     <h1>Шаблонизация</h1>
     <script>
+        const apiData = `
+        {
+            "name": "White-throated Monitor",
+            "latin_name": "Varanus albigularis",
+            "animal_type": "Reptile",
+            "active_time": "Diurnal",
+            "length_min": "3.3",
+            "length_max": "6",
+            "weight_min": "20",
+            "weight_max": "25",
+            "lifespan": "20",
+            "habitat": "Savanna",
+            "diet": "Birds, insects, snails, and invertebrates",
+            "geo_range": "Central and Southern Africa",
+            "image_link": "https://upload.wikimedia.org/wikipedia/commons/0/0e/Rock_monitor%2C_Varanus_albigularis%2C_also_called_commonly_the_white-throated_monitor_or_leguaan._%2848206382456%29.jpg",
+            "id": 192
+        }
+            `;
 
+        console.log(apiData);
     </script>
 </body>
 
