lesson05 video04 time 08:20

--- a/lesson05/vanilla.html
+++ b/lesson05/vanilla.html
@@ -42,6 +42,10 @@
         const app = document.querySelector('.app');
 
         const appAnimalImage = document.createElement('img');
+
+        appAnimalImage.src = data.image_link;
+
+        app.appendChild(appAnimalImage);
     </script>
 </body>
 
