lesson05 video04 time 09:18

--- a/lesson05/vanilla.html
+++ b/lesson05/vanilla.html
@@ -45,6 +45,8 @@
 
         appAnimalImage.src = data.image_link;
 
+        appAnimalImage.classList.add('app__animal-image');
+
         app.appendChild(appAnimalImage);
     </script>
 </body>
