lesson05 video04 time 10:25

--- a/lesson05/vanilla.html
+++ b/lesson05/vanilla.html
@@ -15,7 +15,7 @@
 
 <body>
     <main class="app">
-        <h1>Шаблонизация</h1>
+        <h1 class="app__title">Шаблонизация</h1>
     </main>
     <script>
         const apiData = `
