lesson05 video04 time 14:43

--- a/lesson05/vanilla.html
+++ b/lesson05/vanilla.html
@@ -16,6 +16,11 @@
 <body>
     <main class="app">
         <h1 class="app__title">Шаблонизация</h1>
+        <section class="app__animal-wrapper">
+            <h3 class="app__first">Первый</h3>
+            <h3 class="app__second">Второй</h3>
+            <h3 class="app__third">Третий</h3>
+        </section>
     </main>
     <script>
         const apiData = `
