--- a/lesson05/vanilla.html
+++ b/lesson05/vanilla.html
@@ -48,7 +48,9 @@
 
         const appAnimalWrapper = app.querySelector('.app__animal-wrapper');
 
-        const appFirst = appAnimalWrapper.querySelector('.app__first')
+        const appFirst = appAnimalWrapper.querySelector('.app__first');
+
+        const appSecond = appAnimalWrapper.querySelector('.app__second')
 
         const appAnimalImage = document.createElement('img');
 
@@ -56,7 +58,7 @@
 
         appAnimalImage.classList.add('app__animal-image');
 
-        appAnimalWrapper.insertBefore(appAnimalImage, appFirst);
+        appAnimalWrapper.insertBefore(appAnimalImage, appSecond);
     </script>
 </body>
 
