lesson05 video04 time 24:55

--- a/lesson05/vanilla.html
+++ b/lesson05/vanilla.html
@@ -68,7 +68,7 @@
 
                 const parent = target.parentElement;
 
-                parent.insertBefore(appAnimalImage, target.nextElementSibling);
+                parent.insertBefore(appAnimalImage, parent.firstElementChild);
             }
         });
     </script>
