lesson05 video04 time 36:00

--- a/lesson05/vanilla.html
+++ b/lesson05/vanilla.html
@@ -68,8 +68,12 @@
 
             const parent = target.parentElement;
 
-            parent.insertBefore(appAnimalImage, target.nextElementSibling);
-            parent.insertBefore(appAnimalName, appAnimalImage.nextElementSibling);
+            const fragment = document.createDocumentFragment();
+
+            fragment.appendChild(appAnimalImage);
+            fragment.appendChild(appAnimalName);
+
+            parent.insertBefore(fragment, target.nextElementSibling);
         }
 
         appSubtitles.forEach(subtitle => {
