--- a/lesson05/templating.html
+++ b/lesson05/templating.html
@@ -71,6 +71,9 @@
     </section>
     <script src="https://kit.fontawesome.com/80d0029610.js" crossorigin="anonymous"></script>
     <script src="data.js"></script>
+    <script>
+        console.log(photosData);
+    </script>
 </body>
 
 </html>
