--- a/lesson05/templating.html
+++ b/lesson05/templating.html
@@ -72,7 +72,9 @@
     <script src="https://kit.fontawesome.com/80d0029610.js" crossorigin="anonymous"></script>
     <script src="data.js"></script>
     <script>
-        console.log(photosData);
+        const photos = JSON.parse(photosData);
+
+        console.log(photos);
     </script>
 </body>
 
