lesson05 video05 time 14:30

--- a/lesson05/templating.html
+++ b/lesson05/templating.html
@@ -98,7 +98,7 @@
 
         const gallery = document.querySelector('.gallery');
 
-        gallery.innerHTML += photoStringTemplate(photos[0]);
+        gallery.innerHTML += photos.map(photoStringTemplate).join('');
     </script>
 </body>
 
